; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/serial/extr_cypress_m8.c_cypress_buf_free.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/serial/extr_cypress_m8.c_cypress_buf_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cypress_buf = type { %struct.cypress_buf* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cypress_buf*)* @cypress_buf_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cypress_buf_free(%struct.cypress_buf* %0) #0 {
  %2 = alloca %struct.cypress_buf*, align 8
  store %struct.cypress_buf* %0, %struct.cypress_buf** %2, align 8
  %3 = load %struct.cypress_buf*, %struct.cypress_buf** %2, align 8
  %4 = icmp ne %struct.cypress_buf* %3, null
  br i1 %4, label %5, label %12

5:                                                ; preds = %1
  %6 = load %struct.cypress_buf*, %struct.cypress_buf** %2, align 8
  %7 = getelementptr inbounds %struct.cypress_buf, %struct.cypress_buf* %6, i32 0, i32 0
  %8 = load %struct.cypress_buf*, %struct.cypress_buf** %7, align 8
  %9 = call i32 @kfree(%struct.cypress_buf* %8)
  %10 = load %struct.cypress_buf*, %struct.cypress_buf** %2, align 8
  %11 = call i32 @kfree(%struct.cypress_buf* %10)
  br label %12

12:                                               ; preds = %5, %1
  ret void
}

declare dso_local i32 @kfree(%struct.cypress_buf*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
